# tccm-app

./: .gitignore  Annexure_A_Inventory_of_159_IS_Theories.txt  Annexure_B_Agentic_AI_Programming_Guidelines_Mandatory.txt  RCTO_prompt_1.txt  RCTO_prompt_2.txt  RCTO_prompt_3.txt  README.md  app.py  main.py  models.py  prompts.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
agents/: council_agent.py  tccm_agent.py
utils/: excel_writer.py  llm.py  pdf_reader.py
