[project]
name = "tccm-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=6.14.0",
    "huggingface-hub>=1.14.0",
    "langchain-core>=1.4.0",
    "langgraph>=1.2.0",
    "openpyxl>=3.1.2",
    "pandas>=3.0.3",
    "pymupdf>=1.24.0",
]
