[project]
name = "tccm-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=6.14.0",
    "langgraph>=1.2.0",
    "openpyxl>=3.1.2",
    "pandas>=3.0.3",
    "litellm>=1.84.0",
    "pymupdf>=1.27.2.3",
    "huggingface-hub>=1.14.0",
]
